--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h2><h1>Bonjour</h1>
-								<h2></h2>
+								<!-- <h2><h1>Bonjour</h1> -->
 							</header>
 							<p>Je suis <strong>Intissar Mkadem</strong>. Conseilleure et consultante en droits des affaires internationales.   
 								<strong>Bref,</strong> Je prends soin de vos soucis juridiques</a>.</p>
